# fs-api

./: .gitignore
fs/api/: Cargo.toml  config.yaml
fs/api/example/ui/: index.html
fs/api/src/: api.rs  config.rs  directory.rs  file.rs  http.rs  lib.rs  main.rs  path.rs  resolver.rs
fs/ui/: Cargo.toml  Trunk.toml  index.html
fs/ui/src/: app.rs  directory.rs  lib.rs
