[package]
name = "fs_api"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
mime_guess = "2.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
