[package]
name = "fs_api_ui"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }
reqwasm = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
mime_guess = "2.0"

[lib]
name = "fs_api"
crate-type = ["cdylib"]
path = "src/lib.rs"
